# bsd386-1.1-src

./: .MAP  MANIFEST  MANIFEST.X11  Makefile  README.md  boot-source.txt  kernel-source.txt
X11/: .MAP
X11/contrib/: .MAP
X11/mit/: .MAP
contrib/: .MAP  Makefile  Makefile.inc
contrib/bash/: .MAP  MAP  Makefile
contrib/basic/: .MAP  Makefile  README  README.TOO  basica.1  expr.c  globals.c  lex.c  lines.c  lines.s  linpack.c  linpack.f  linpackc.c  linpackwork.c  main.c  mat.c  misc.c  obj  ops.c  parser.sed  parser.y  renum.c  run.c  stmt.c  stmt.s  strings.c  structs.h  symbols.c  sysadm  temps.c  trees.c  typecheck.c  update  y.tab.h.new
contrib/calc/: .MAP  Makefile  addop.c  assocfunc.c  calc.1  calc.c  calc.h  codegen.c  config.c  file.c  func.c  hist.c  input.c  matfunc.c  obj  obj.c  opcodes.c  qfunc.c  qio.c  qmath.c  qmath.h  qtrans.c  string.c  symbol.c  tags  token.c  token.h  value.c  value.h  version.c  zfunc.c  zio.c  zmath.c  zmath.h  zmod.c  zmul.c
contrib/cdif/: .MAP  Makefile  cdif.1  cdif.sh  obj
contrib/checksendmail/: .MAP  Makefile  checksendmail.perl  obj
contrib/cshar/: .MAP  Makefile
contrib/daemon/: .MAP  Makefile  daemon.1  daemon.c  obj  tags
contrib/dig/: .MAP  Makefile  dig.1  dig.c  gethostnamadr.c  herror.c  hfiles.h  list.c  nameser.h  netdb.h  obj  options.c  param.h  pflag.h  qtime.c  qtime.h  res.h  res_comp.c  res_debug.c  res_init.c  res_mkquery.c  res_query.c  res_send.c  resolv.h  sethostent.c  strcasecmp.c  subr.c  subr.h  tags
contrib/dvijep/: .MAP  Makefile  README  abortrun.h  actfact.h  alldone.h  chargf.h  charpk.h  charpxl.h  clrrow.h  commands.h  dbgopen.h  dvifile.h  dvihead.h  dviinit.h  dvijep.1  dvijep.c  dviterm.h  f20open.h  fatal.h  findpost.h  fixpos.h  fndfil.c  fontfile.h  fontsub.h  gblprocs.h  gblvars.h  gendefs.h  getbytes.h  getfntdf.h  getpgtab.h  initglob.h  machdefs.h  main.h  movedown.h  moveover.h  moveto.h  nosignex.h  obj  openfont.h  (+24 more)
contrib/dvips/: .MAP  Makefile  Makefile.inc
contrib/dvips/grot/: .MAP  Makefile  Makefile,v  Makefile.in  Makefile.in,v  README  aclocal.m4  adobe  configure  configure.in
contrib/dvips/grot/pc/: .MAP  README.pc  config.ps  makefile.gcc  makefile.tc  maketexp.bat
contrib/dvips/grot/vmcms/: .MAP  Makefile.IBM  README.VMCMS  afm2tfm.exec  dvips.exec  dvipscms.h  mkdvips.exec  texc.exec
contrib/dvips/grot/vms/: .MAP  MAKE.COM  dvips.cld  texc_script.co  vaxvms.c  vms.h  vmscli.c
contrib/elm/: .MAP  Makefile  config.h
contrib/elvis/: .MAP  Makefile
contrib/emacs/: .MAP
contrib/flexfax/: .MAP  BLURB  CHANGES-v2.1  CHANGES-v2.2  HOWTO  MAP  MODEMS  Makefile  Makefile.inc  README  SURVEY  TODO  configure  defs  distrules  port.h  rules
contrib/ghostview/: .MAP  obj
contrib/gmake/: .MAP  ChangeLog  Makefile  config.h  gmake.1  obj  tags  version.c
contrib/gpatch/: .MAP  EXTERN.h  INTERN.h  Makefile  common.h  config.h  gpatch.1  inp.c  inp.h  obj  patch.c  pch.c  pch.h  tags  util.h  version.c  version.h
contrib/gs/: .MAP
contrib/gzip/: .MAP  MAP  Makefile  bits.c  crypt.c  deflate.c  gzexe.in  gzip.c  inflate.c  lzw.c  match.S  obj  (+12 more)
contrib/texinfo/grot/: .MAP  ChangeLog  Makefile.in  NEWS  configure  configure.in
contrib/tk/grot/: .MAP  Makefile  Makefile.in  README  ToDo  changes  config.status  configure  configure.in  configure.info  porting.notes
contrib/tk/grot/doc/: .MAP  3DBorder.3  BackgdErr.3  ClrSelect.3  ConfigWidg.3  ConfigWind.3  CoordToWin.3  CrtErrHdlr.3  CrtGenHdlr.3  CrtMainWin.3  CrtSelHdlr.3  DoOneEvent.3  DoWhenIdle.3  EventHndlr.3  FileHndlr.3  GeomReq.3  GetAnchor.3  GetBitmap.3  GetCapStyl.3  GetColor.3  GetCursor.3  GetFontStr.3  GetGC.3  GetJoinStl.3  GetJustify.3  GetOption.3  GetPixels.3  GetRelief.3  GetRootCrd.3  GetSelect.3  GetUid.3  GetVRoot.3  InternAtom.3  MainWin.3  ManageGeom.3  MapWindow.3  MoveToplev.3  Name.3  OwnSelect.3  ParseArgv.3  (+52 more)
contrib/wdiff/grot/: .MAP  ChangeLog  Makefile  Makefile.in  NEWS  README  THANKS  TODO  a1  a2  c-boxes.el  check_it  config.status  configure  configure.in  gpl.texinfo  strstr.c  wdiff.info  wdiff.texi
domestic/: .MAP  Makefile
etc/: .MAP  Makefile  aliases  crontab  daily  daily.local  gettytab  group  hosts  inetd.conf  man.conf  master.passwd  monthly  monthly.local  netstart  networks  phones  printcap  rc  rc.local  remote  services  syslog.conf  ttys  weekly  weekly.local
games/: .MAP  Makefile  Makefile.inc
include/: .MAP  Makefile  a.out.h  ar.h  assert.h  bitstring.h  ctype.h  db.h  dirent.h  err.h  grp.h  kvm.h  limits.h  math.h  netdb.h  nlist.h  paths.h  pwd.h  regex.h  regexp.h  resolv.h  rune.h  runetype.h  setjmp.h  stddef.h  stdio.h  stdlib.h  string.h  sysexits.h  time.h  unistd.h  utmp.h  varargs.h
lib/: .MAP  Makefile
lib/libg++/D/libio/: .MAP  ChangeLog  Makefile.in  NEWS  README  builtinbuf.cc  builtinbuf.h  cleanup.c  config.shared  configure.in  filebuf.cc  filedoalloc.c  fileops.c  floatconv.c  gen-params  genops.c  iofclose.c  iofdopen.c  iofflush.c  iofgets.c  iofopen.c  iofprintf.c  iofputs.c  ioftell.c  iofwrite.c  iogetline.c  iogets.c  ioignore.c  iolibio.h  iomanip.cc  iomanip.h  ioperror.c  iopopen.c  ioputs.c  iosetbuffer.c  iosetvbuf.c  iostdio.h  iostream.cc  iostream.h  iostream.info  (+16 more)
lib/libg++/D/libio/config/: .MAP
lib/libg++/D/libio/dbz/: Makefile.in  dbzmain.c  fake.c
lib/libg++/D/libio/stdio/: .MAP  ChangeLog  Makefile.in  clearerr.c  configure.in  feof.c  ferror.c  fgetc.c  fileno.c  fputc.c  freopen.c  fseek.c  getw.c  putw.c  rewind.c  setfileno.c  stdio.h  vfprintf.c  vfscanf.c
lib/libg++/D/libio/tests/: .MAP  ChangeLog  Makefile.in  tFile.cc  tFile.exp  tfformat.c  tiomisc.cc  tiomisc.exp  tstdiomisc.c
lib/libg++/D/xiberty/: configure.in
libexec/: .MAP  Makefile
old/: .MAP  Makefile  Makefile.inc
sbin/: .MAP  Makefile
share/: .MAP
sys/: .MAP
usr.bin/: .MAP  Makefile
usr.bin/spell/grot/: .MAP  ChangeLog  INSTALL  Makefile  Makefile.in  TODO  c-generic.c  c-ibmpc.c  config.h  config.status  configure  configure.in  expand.c  look.c  mapcase.c
usr.sbin/: .MAP  Makefile
var/: .MAP
(+8964 files in other folders)
