dnl Process this file with autoconf to produce a configure script.
AC_INIT(dvips.c)

dnl Write output here, instead of putting -D's on the command line.
AC_CONFIG_HEADER(c-auto.h)

AC_PROG_CC
AC_PROG_CPP
AC_GCC_TRADITIONAL
AC_PROG_INSTALL

AC_ISC_POSIX

AC_DIR_HEADER
AC_HEADER_CHECK(limits.h, : , AC_DEFINE(LIMITS_H_MISSING))
AC_HEADER_CHECK(float.h, : , AC_DEFINE(FLOAT_H_MISSING))
AC_MEMORY_H
AC_STDC_HEADERS
AC_UNISTD_H
AC_USG

AC_INT_16_BITS

AC_PREFIX(dvips)

dnl This will generate `Makefile'(s), `config.status', and our header file.
AC_OUTPUT(./Makefile)
